objects/Cost_Note__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Claim__r.Opportunity__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unternehmen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Kostennoten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advance_Payment_By_Customer__c</fullName>
        <label>Vorauszahlung (Kunde)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advance_Payment_By_Legal_Prot_Insurance__c</fullName>
        <label>Vorauszahlung (RSV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_For_Customer__c</fullName>
        <formula>IF(Claim__r.Opportunity__r.Commercial_Customer__c = true,IF(TEXT(Recipient__c) = 'Legal Protection Insurance',Deductible__c + Total_VAT__c ,0),IF(TEXT(Recipient__c) = 'Legal Protection Insurance',Deductible__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summe (Kunde)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_For_Legal_Prot_Insurance__c</fullName>
        <formula>IF(Claim__r.Opportunity__r.Commercial_Customer__c = true,IF(TEXT(Recipient__c) = 'Legal Protection Insurance',Amount__c - Deductible__c - Total_VAT__c,0),IF(TEXT(Recipient__c) = 'Legal Protection Insurance',Amount__c - Deductible__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summe (RSV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Open_By_Customer__c</fullName>
        <formula>Amount_For_Customer__c - Amount_Paid_By_Customer__c - Advance_Payment_By_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offene Summe (Kunde)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Open_By_Legal_Prot_Insurance__c</fullName>
        <formula>Amount_For_Legal_Prot_Insurance__c - Amount_Paid_By_Legal_Prot_Insurance__c - Advance_Payment_By_Legal_Prot_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offene Summe (RSV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Open__c</fullName>
        <formula>Amount__c - Cost_Note_Payment_Sum__c - Advance_Payment_By_Legal_Prot_Insurance__c - Advance_Payment_By_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offene Summe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_By_Customer__c</fullName>
        <label>Gezahlte Summe (Kunde)</label>
        <summarizedField>Cost_Note_Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Note_Payment__c.Sender_Type__c</field>
            <operation>equals</operation>
            <value>Kunde</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Note_Payment__c.Cost_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_By_Legal_Prot_Insurance__c</fullName>
        <label>Gezahlte Summe (RSV)</label>
        <summarizedField>Cost_Note_Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Note_Payment__c.Sender_Type__c</field>
            <operation>equals</operation>
            <value>RSV</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Note_Payment__c.Cost_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_Without_Court_Costs__c</fullName>
        <formula>IF(Court_Costs__c &gt; Amount_Paid__c,0,Amount_Paid__c - Court_Costs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gezahlte Summe abzgl. Gerichtskosten</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <formula>Cost_Note_Payment_Sum__c +  Advance_Payment_By_Customer__c +  Advance_Payment_By_Legal_Prot_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gezahlte Summe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Refactored__c</fullName>
        <label>Amount Refactored</label>
        <summarizedField>Cost_Note_Line_Item__c.Gross_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Note_Line_Item__c.Reinvoiced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Note_Line_Item__c.Cost_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>ROUND(Total_Price__c + Total_VAT__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Belegdatum__c</fullName>
        <formula>LPAD(TEXT(DAY(Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Belegdatum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Belegfeld_1__c</fullName>
        <formula>Claim__r.Opportunity__r.Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Belegfeld 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Belegfeld_2__c</fullName>
        <formula>RIGHT(Claim__r.Opportunity__r.Number__c,LEN(Claim__r.Opportunity__r.Number__c)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Belegfeld 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buchungstext__c</fullName>
        <formula>Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buchungstext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellationexisting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellationexisting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Fall</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipName>Cost_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost_Note_Payment_Sum__c</fullName>
        <label>Cost Note Payment Sum</label>
        <summarizedField>Cost_Note_Payment__c.Amount__c</summarizedField>
        <summaryForeignKey>Cost_Note_Payment__c.Cost_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Court_Costs__c</fullName>
        <label>Gerichtskosten</label>
        <summarizedField>Cost_Note_Line_Item__c.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Note_Line_Item__c.Calculate_Vat__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Note_Line_Item__c.Cost_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Created_Date_Old_Org__c</fullName>
        <label>Created Date Old Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Datum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <formula>Claim__r.Opportunity__r.Legal_Protection_Deductible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selbstbehalt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disable_Dunning_For_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mahnwesen für Kunden aussetzen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Dunning_For_Legal_Prot_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mahnwesen für RSV aussetzen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Due_Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Due_Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Due_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Date__c + Payment_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fälligkeitsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gegenkonto__c</fullName>
        <formula>IF(Claim__r.Opportunity__r.Legal_Account__c = "0010Y000010COcm",Claim__r.Opportunity__r.Customer_Number_5_Digit__c,Claim__r.Opportunity__r.Customer_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gegenkonto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kennzeichen__c</fullName>
        <formula>"H"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kennzeichen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kontonummer__c</fullName>
        <formula>IF(Claim__r.Opportunity__r.Legal_Account__c = "0010Y000010COcm","8400","84000")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kontonummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mahnungen__c</fullName>
        <label>Mahnungen</label>
        <summaryForeignKey>Cost_Note_Reminder__c.Cost_Note__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Nummer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Kostennote_ID__c</fullName>
        <label>Old Kostennote ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Id__c</fullName>
        <formula>Claim__r.Opportunity__r.Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Claim__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type_Id__c</fullName>
        <formula>Claim__r.Opportunity__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Vehicle_Brand_Id__c</fullName>
        <formula>Claim__r.Opportunity__r.Vehicle_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Vehicle Brand Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Zahlungsfrist</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previously_Factored_Vat__c</fullName>
        <label>Zuvor Berechnete MwSt.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previously_Factored__c</fullName>
        <label>Zuvor Berechnet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Empfänger</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cost_Note_Recipients</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <formula>Claim__r.Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aktenzeichen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sending_Date__c</fullName>
        <label>Versanddatum</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cost_Note_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stornierungen__c</fullName>
        <label>Stornierungen</label>
        <summaryForeignKey>Cancellation__c.Cost_Note__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Betreff</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>Claim__r.Opportunity__r.Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Price_With_Vat__c</fullName>
        <label>Total Price With Vat</label>
        <summarizedField>Cost_Note_Line_Item__c.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Note_Line_Item__c.Calculate_Vat__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Note_Line_Item__c.Cost_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Gesamthonorar</label>
        <summarizedField>Cost_Note_Line_Item__c.Total_Price__c</summarizedField>
        <summaryForeignKey>Cost_Note_Line_Item__c.Cost_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Reinvoiced__c</fullName>
        <label>Total Reinvoiced</label>
        <summarizedField>Cost_Note_Line_Item__c.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Note_Line_Item__c.Reinvoiced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Note_Line_Item__c.Cost_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_VAT__c</fullName>
        <formula>Total_Price_With_Vat__c * 0.19</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USt.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Typ</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cost_Note_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Umsatz__c</fullName>
        <formula>SUBSTITUTE(TEXT(Amount__c - Previously_Factored__c - Previously_Factored_Vat__c),".",",")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Umsatz</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uploaded_To_Dropbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hochgeladen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wiedervorlage_erstellen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wiedervorlage erstellen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>customerCostNoteReminderExisting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>customerCostNoteReminderExisting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>insuranceCostNoteReminderExisting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>insuranceCostNoteReminderExisting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Umsatz2__c</fullName>
        <formula>(Amount__c - Previously_Factored__c - Previously_Factored_Vat__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Umsatz2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Kostennote</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kostennoten</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Number__c</columns>
        <columns>Subject__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Cost_Note_Payment_Sum__c</columns>
        <columns>Amount_Open__c</columns>
        <columns>Stage__c</columns>
        <columns>Payment_Term__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Claim__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JVH</fullName>
        <columns>NAME</columns>
        <columns>Number__c</columns>
        <columns>Subject__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Cost_Note_Payment_Sum__c</columns>
        <columns>Amount_Open__c</columns>
        <columns>Stage__c</columns>
        <columns>Payment_Term__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Number__c</field>
            <operation>contains</operation>
            <value>JVH</value>
        </filters>
        <label>JVH</label>
    </listViews>
    <listViews>
        <fullName>Nicht_versendete_Kostennoten</fullName>
        <columns>NAME</columns>
        <columns>Reference__c</columns>
        <columns>Number__c</columns>
        <columns>Subject__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Cost_Note_Payment_Sum__c</columns>
        <columns>Amount_Open__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Amount_Open__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>*Nicht versendete Kostennoten</label>
    </listViews>
    <listViews>
        <fullName>Overdue_Cost_Notes_Without_Reminder</fullName>
        <columns>NAME</columns>
        <columns>Reference__c</columns>
        <columns>Number__c</columns>
        <columns>Subject__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Cost_Note_Payment_Sum__c</columns>
        <columns>Amount_Open__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft,Sent</value>
        </filters>
        <label>*Überfällige Kostennote ohne Mahnung</label>
        <sharedTo>
            <group>H_Jaeger</group>
            <group>Lachmair</group>
            <group>Lachmair_Accounting</group>
            <group>Lachmair_Admin</group>
            <group>VH24_Diesel</group>
            <group>VR24_Diesel</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Overpaid_Cost_Notes</fullName>
        <columns>NAME</columns>
        <columns>Reference__c</columns>
        <columns>Number__c</columns>
        <columns>Subject__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Cost_Note_Payment_Sum__c</columns>
        <columns>Amount_Open__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Sent,Paid</value>
        </filters>
        <filters>
            <field>Amount_Open__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>*Überzahlte Kostennoten</label>
    </listViews>
    <listViews>
        <fullName>Paid_Cost_Notes</fullName>
        <columns>NAME</columns>
        <columns>Reference__c</columns>
        <columns>Number__c</columns>
        <columns>Subject__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Cost_Note_Payment_Sum__c</columns>
        <columns>Amount_Open__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>*Bezahlte Kostennoten</label>
    </listViews>
    <listViews>
        <fullName>Teilbezahlte_Kostennoten</fullName>
        <columns>NAME</columns>
        <columns>Reference__c</columns>
        <columns>Number__c</columns>
        <columns>Subject__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Cost_Note_Payment_Sum__c</columns>
        <columns>Amount_Open__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <filters>
            <field>Amount_Paid__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>*Teilbezahlte Kostennoten</label>
    </listViews>
    <listViews>
        <fullName>Testkostennoten</fullName>
        <columns>NAME</columns>
        <columns>Reference__c</columns>
        <columns>Subject__c</columns>
        <columns>Date__c</columns>
        <columns>Recipient__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Amount_Open__c</columns>
        <columns>Amount__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Testkostennoten</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_Cost_Notes</fullName>
        <columns>NAME</columns>
        <columns>Reference__c</columns>
        <columns>Number__c</columns>
        <columns>Subject__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Cost_Note_Payment_Sum__c</columns>
        <columns>Amount_Open__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>*Unbezahlte Kostennoten</label>
    </listViews>
</CustomObject>